--- a/Authentication/src/main/resources/templates/register.html
+++ b/Authentication/src/main/resources/templates/register.html
@@ -3,10 +3,11 @@
 <head><title>Register</title></head>
 <body>
 <h2>Register</h2>
-<form method="post" th:action="@{/register}" th:object="${user}">
-    <input type="text" th:field="*{username}" placeholder="Username"/><br/>
-    <input type="password" th:field="*{password}" placeholder="Password"/><br/>
+<form th:action="@{/register}" method="post" th:object="${user}">
+    <input type="text" th:field="*{username}" placeholder="Username"><br>
+    <input type="password" th:field="*{password}" placeholder="Password"><br>
     <button type="submit">Register</button>
 </form>
+<p><a th:href="@{/login}">Back to Login</a></p>
 </body>
 </html>
