--- a/Authentication/src/main/resources/templates/login.html
+++ b/Authentication/src/main/resources/templates/login.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head><title>Login</title></head>
+
+<head>
+    <title>Login</title>
+</head>
+
 <body>
-<h2>Login</h2>
-<form th:action="@{/login}" method="post" th:object="${user}">
-    <input type="text" th:field="*{username}" placeholder="Username"><br>
-    <input type="password" th:field="*{password}" placeholder="Password"><br>
-    <button type="submit">Login</button>
-</form>
-<p>Don't have an account? <a th:href="@{/register}">Register here</a></p>
-<p th:if="${error}" th:text="${error}" style="color: red;"></p>
+    <h2>Login</h2>
+    <form th:action="@{/login}" method="post" th:object="${user}">
+        <input type="text" th:field="*{username}" placeholder="Username"><br>
+        <input type="password" th:field="*{password}" placeholder="Password"><br>
+        <button type="submit">Login</button>
+    </form>
+    
+    <p>Or</p>
+
+    <a href="/oauth2/authorization/google">
+        <button>Continue with Google</button>
+    </a>
+    <p>Don't have an account? <a th:href="@{/register}">Register here</a></p>
+    <p th:if="${error}" th:text="${error}" style="color: red;"></p>
 </body>
+
 </html>
