--- a/Authentication/src/main/resources/templates/login.html
+++ b/Authentication/src/main/resources/templates/login.html
@@ -3,25 +3,27 @@
 
 <head>
     <title>Login</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-    <h2>Login</h2>
+    <div class="login-container">
+        <h2>Login</h2>
 
-    <form th:action="@{/login}" method="post" th:object="${user}">
-        <input type="text" th:field="*{username}" placeholder="Username"><br>
-        <input type="password" th:field="*{password}" placeholder="Password"><br>
-        <button type="submit">Login</button>
-    </form>
-    
-    <p>Or</p>
+        <form th:action="@{/login}" method="post" th:object="${user}">
+            <input type="text" th:field="*{username}" placeholder="Username" required><br>
+            <input type="password" th:field="*{password}" placeholder="Password" required><br>
+            <button type="submit">Login</button>
+        </form>
 
-    <a href="/oauth2/authorization/google">
-        <button>Continue with Google</button>
-    </a>
-    <p>Don't have an account? <a th:href="@{/register}">Register here</a></p>
-    <p th:if="${error}" th:text="${error}" style="color: red;"></p>
+        <p>Or</p>
+
+        <!-- Use styled link instead of button inside anchor -->
+        <a href="/oauth2/authorization/google" class="social-btn google-btn">Continue with Google</a>
+
+        <p>Don't have an account? <a th:href="@{/register}">Register here</a></p>
+        <p th:if="${error}" th:text="${error}" class="error-message"></p>
+    </div>
 </body>
 
 </html>
