--- a/Authentication/src/main/resources/static/css/style.css
+++ b/Authentication/src/main/resources/static/css/style.css
@@ -19,7 +19,8 @@ body {
     padding: 40px;
     border-radius: 16px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    width: 400px;
+    height: 500px;
     text-align: center;
 }
 
@@ -70,7 +71,33 @@ a:hover {
     text-decoration: underline;
 }
 
-/* Styled Google Button */
+ /* Styled Google Button */
+ .google-btn {
+    display: inline-flex;
+    align-items: center;
+    gap: 10px;
+    background: white;
+    border: 1px solid #ddd;
+    padding: 10px 20px;
+    border-radius: 8px;
+    font-size: 14px;
+    color: #444;
+    text-decoration: none;
+    cursor: pointer;
+    transition: background 0.3s;
+    margin-top: 10px;
+}
+
+.google-btn:hover {
+    background: #f0f0f0;
+}
+
+.google-icon {
+    font-size: 18px;
+    color: #EA4335;
+}
+
+/*
 .social-btn {
     display: inline-block;
     width: 100%;
@@ -95,7 +122,7 @@ a:hover {
     margin-top: 15px;
     color: red;
     font-size: 14px;
-}
+} */
 
 /* Responsive for tablets (≤ 720px) */
 @media (max-width: 720px) {
