google sign in added

--- a/Authentication/src/main/resources/static/css/style.css
+++ b/Authentication/src/main/resources/static/css/style.css
@@ -92,9 +92,9 @@ a:hover {
     background: #f0f0f0;
 }
 
-.google-icon {
-    font-size: 18px;
-    color: #EA4335;
+.google-logo {
+    width: 20px;
+    height: 20px;
 }
 
 /*
