--- a/Authentication/src/main/resources/templates/login.html
+++ b/Authentication/src/main/resources/templates/login.html
@@ -21,8 +21,9 @@
 
         <!-- Use styled link instead of button inside anchor -->
         <a href="/oauth2/authorization/google" class="google-btn">
-            <i class="fab fa-google google-icon"></i>
+            <img src="/images/google-logo.png" alt="Google logo" class="google-logo">
         </a>
+
 
 
         <p>Don't have an account? <a th:href="@{/register}">Register here</a></p>
