facebook login added

--- a/Authentication/src/main/resources/templates/login.html
+++ b/Authentication/src/main/resources/templates/login.html
@@ -23,6 +23,9 @@
         <a href="/oauth2/authorization/google" class="google-btn">
             <img src="/images/google-logo.png" alt="Google logo" class="google-logo">
         </a>
+        <a href="/oauth2/authorization/facebook" class="social-btn facebook">
+        <img src="/images/facebook-logo.png" alt="Facebook logo" class="social-logo">
+    </a>
 
 
 
