--- a/Authentication/src/main/resources/templates/login.html
+++ b/Authentication/src/main/resources/templates/login.html
@@ -24,8 +24,11 @@
             <img src="/images/google-logo.png" alt="Google logo" class="google-logo">
         </a>
         <a href="/oauth2/authorization/facebook" class="social-btn facebook">
-        <img src="/images/facebook-logo.png" alt="Facebook logo" class="social-logo">
-    </a>
+            <img src="/images/facebook-logo.png" alt="Facebook logo" class="social-logo">
+        </a>
+        <a href="/oauth2/authorization/github" class="social-btn github">
+            <img src="/images/github-logo.png" alt="GitHub logo" class="social-logo">
+        </a>
 
 
 
