--- a/Authentication/src/main/resources/templates/login.html
+++ b/Authentication/src/main/resources/templates/login.html
@@ -20,15 +20,17 @@
         <p>Or</p>
 
         <!-- Use styled link instead of button inside anchor -->
-        <a href="/oauth2/authorization/google" class="google-btn">
-            <img src="/images/google-logo.png" alt="Google logo" class="google-logo">
-        </a>
-        <a href="/oauth2/authorization/facebook" class="social-btn facebook">
-            <img src="/images/facebook-logo.png" alt="Facebook logo" class="social-logo">
-        </a>
-        <a href="/oauth2/authorization/github" class="social-btn github">
-            <img src="/images/github-logo.png" alt="GitHub logo" class="social-logo">
-        </a>
+        <div class="social-login">
+            <a href="/oauth2/authorization/google" class="google-btn">
+                <img src="/images/google-logo.png" alt="Google logo" class="google-logo">
+            </a>
+            <a href="/oauth2/authorization/facebook" class="social-btn facebook">
+                <img src="/images/facebook-logo.png" alt="Facebook logo" class="social-logo">
+            </a>
+            <a href="/oauth2/authorization/github" class="social-btn github">
+                <img src="/images/github-logo.png" alt="GitHub logo" class="social-logo">
+            </a>
+        </div>
 
 
 
