--- a/Authentication/src/main/resources/templates/register.html
+++ b/Authentication/src/main/resources/templates/register.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head><title>Register</title></head>
+<head>
+    <title>Register</title>
+    <link rel="stylesheet" href="/css/style.css"></head>
 <body>
-<h2>Register</h2>
-<form th:action="@{/register}" method="post" th:object="${user}">
-    <input type="text" th:field="*{username}" placeholder="Username"><br>
-    <input type="password" th:field="*{password}" placeholder="Password"><br>
-    <button type="submit">Register</button>
-</form>
-<p><a th:href="@{/login}">Back to Login</a></p>
+<div class="register-container">
+  <h2>Register</h2>
+  <form th:action="@{/register}" method="post" th:object="${user}">
+      <input type="text" th:field="*{username}" placeholder="Username"><br>
+      <input type="password" th:field="*{password}" placeholder="Password"><br>
+      <button type="submit">Register</button>
+  </form>
+  <p><a th:href="@{/login}">Already have an account?</a></p>
+</div>
 </body>
+
 </html>
