--- a/Authentication/src/main/resources/templates/register_successfull.html
+++ b/Authentication/src/main/resources/templates/register_successfull.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head><title>Registered</title></head>
+<head>
+    <title>Registered</title>
+    <link rel="stylesheet" href="/css/style.css">
+</head>
 <body>
 <h2>Registration Successful!</h2>
 <p>Welcome, <span th:text="${username}"></span>!</p>
