--- a/Authentication/src/main/resources/static/css/style.css
+++ b/Authentication/src/main/resources/static/css/style.css
@@ -155,6 +155,8 @@ a:hover {
     background-color: #24292e;
 }
 
+
+
 /* Responsive for Tablets (≤ 720px) */
 @media (max-width: 720px) {
     .login-container,
@@ -197,5 +199,15 @@ a:hover {
     .error-message,
     a {
         font-size: 13px;
+    }
+
+    .success-container {
+        width: 90%;
+        padding: 20px;
+    }
+
+    .success-container p,
+    .success-container a {
+        font-size: 14px;
     }
 }
