--- a/Authentication/src/main/resources/templates/login.html
+++ b/Authentication/src/main/resources/templates/login.html
@@ -14,6 +14,13 @@
         <form th:action="@{/login}" method="post" th:object="${user}">
             <input type="text" th:field="*{username}" placeholder="Username" required><br>
             <input type="password" th:field="*{password}" placeholder="Password" required><br>
+            <div class="options-row">
+                <label class="remember-me">
+                    <input type="checkbox" name="remember"> Remember Me
+                </label>
+                <a th:href="@{/forgot-password}" class="forgot-password">Forgot Password?</a>
+            </div>
+
             <button type="submit">Login</button>
         </form>
 
@@ -36,6 +43,7 @@
 
         <p>Don't have an account? <a th:href="@{/register}">Register here</a></p>
         <p th:if="${error}" th:text="${error}" class="error-message"></p>
+
     </div>
 </body>
 
