--- a/Authentication/src/main/resources/templates/forgot_password.html
+++ b/Authentication/src/main/resources/templates/forgot_password.html
@@ -2,13 +2,16 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Forgot Password</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h2>Forgot Password</h2>
-    <form action="#" th:action="@{/forgot-password}" method="POST">
-        <label for="email">Enter your email to reset password:</label>
-        <input type="email" id="email" name="email" required>
-        <button type="submit">Submit</button>
-    </form>
+    <div class="forgot-password-container">
+        <h2>Forgot Password</h2>
+        <form action="#" th:action="@{/forgot-password}" method="POST">
+            <label for="email">Enter your email to reset password:</label>
+            <input type="email" id="email" name="email" required>
+            <button type="submit">Submit</button>
+        </form>
+    </div>
 </body>
 </html>
