--- a/Authentication/src/main/resources/templates/login.html
+++ b/Authentication/src/main/resources/templates/login.html
@@ -27,7 +27,10 @@
         <p>Or</p>
 
         <!-- Use styled link instead of button inside anchor -->
-        <a href="/oauth2/authorization/google" class="social-btn google-btn">Continue with Google</a>
+        <a href="/oauth2/authorization/google" class="google">
+            <img src="https://developers.google.com/identity/images/g-logo.png" alt="Google logo" style="height: 18px;">
+            Sign in with Google
+        </a>
 
 
 
