--- a/Authentication/src/main/resources/templates/register.html
+++ b/Authentication/src/main/resources/templates/register.html
@@ -10,9 +10,9 @@
     <form th:action="@{/register}" method="post" th:object="${user}">
         <input type="text" th:field="*{firstName}" placeholder="First Name" required><br>
         <input type="text" th:field="*{lastName}" placeholder="Last Name" required><br>
-        <input type="text" th:field="*{username}" placeholder="Username" required><br>
+        <!-- <input type="text" th:field="*{username}" placeholder="Username" required><br> -->
         <input type="email" th:field="*{email}" placeholder="Email" required><br>
-        <input type="text" th:field="*{phone}" placeholder="Phone Number"><br>
+        <!-- <input type="text" th:field="*{phone}" placeholder="Phone Number"><br> -->
         <input type="password" th:field="*{password}" placeholder="Password" required><br>
         <input type="password" name="confirmPassword" placeholder="Confirm Password" required><br>
         <button type="submit">Register</button>
