--- a/Authentication/src/main/resources/templates/forgot_password.html
+++ b/Authentication/src/main/resources/templates/forgot_password.html
@@ -13,8 +13,8 @@
         <button type="submit">Submit</button>
     </form>
 
-    <!-- Popup message if reset was successful -->
-    <div th:if="${message}" class="popup-message" th:text="${message}"></div>
+    <!-- Popup message if reset was successful
+    <div th:if="${message}" class="popup-message" th:text="${message}"></div> -->
 </div>
 
 </body>
