--- a/Authentication/src/main/resources/templates/forgot_password.html
+++ b/Authentication/src/main/resources/templates/forgot_password.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <title>Forgot Password</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
-<body>
-<div class="blur-container forgot-password-container">
-    <h2>Forgot Password</h2>
-    <form th:action="@{/forgot-password}" method="POST">
-        <label for="email">Enter your email to reset password:</label>
-        <input type="email" id="email" name="email" required>
-        <button type="submit">Submit</button>
-    </form>
 
-    <!-- Popup message if reset was successful
-    <div th:if="${message}" class="popup-message" th:text="${message}"></div> -->
-</div>
+<body>
+    <div class="blur-container forgot-password-container">
+        <h2>Forgot Password</h2>
+        <form th:action="@{/forgot-password}" method="post">
+            <input type="email" name="email" placeholder="Enter your email" required>
+            <button type="submit">Send OTP</button>
+        </form>
+    </div>
 
 </body>
+
 </html>
