--- a/Authentication/src/main/resources/templates/forgot_password.html
+++ b/Authentication/src/main/resources/templates/forgot_password.html
@@ -13,6 +13,10 @@
             <input type="email" name="email" placeholder="Enter your email" required>
             <button type="submit">Send OTP</button>
         </form>
+        <div th:if="${error}" style="color:red; margin-top:10px;">
+            <p th:text="${error}"></p>
+        </div>
+
     </div>
 
 </body>
