--- a/Authentication/src/main/resources/static/css/style.css
+++ b/Authentication/src/main/resources/static/css/style.css
@@ -1,5 +1,7 @@
 /* Global Box Sizing */
-*, *::before, *::after {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
 
@@ -129,14 +131,16 @@ input[type="checkbox"] {
     border-radius: 25px;
     cursor: pointer;
     text-decoration: none;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     transition: background-color 0.3s ease;
 }
 
 .google:hover {
     background-color: #f7f7f7;
-    text-decoration: none; /* Ensure no underline on hover */
-    transform: scale(1.05); /* Slight zoom */
+    text-decoration: none;
+    /* Ensure no underline on hover */
+    transform: scale(1.05);
+    /* Slight zoom */
 }
 
 .otp-container {
@@ -149,13 +153,60 @@ input[type="checkbox"] {
     text-align: center;
 }
 
-.otp-container input, .otp-container button {
+.otp-container input,
+.otp-container button {
     margin: 10px 0;
     padding: 10px;
     width: 80%;
 }
 
+/* reset password */
 
+.reset-container {
+    max-width: 400px;
+    margin: 80px auto;
+    padding: 30px;
+    background: #f9f9f9;
+    border-radius: 12px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+}
+
+.reset-container h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.reset-container input {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+}
+
+.reset-container button {
+    width: 100%;
+    padding: 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.reset-container button:hover {
+    background-color: #45a049;
+}
+
+.error {
+    color: red;
+    text-align: center;
+}
+
+.success {
+    color: green;
+    text-align: center;
+}
 
 /* Success Message Popup */
 .popup-message {
@@ -178,9 +229,11 @@ input[type="checkbox"] {
     0% {
         opacity: 1;
     }
+
     80% {
         opacity: 1;
     }
+
     100% {
         opacity: 0;
         visibility: hidden;
@@ -261,11 +314,12 @@ input[type="checkbox"] {
 
 .forgot-password-container button:hover {
     opacity: 0.9;
-    transform: scale(1.05); 
+    transform: scale(1.05);
 }
 
 /* Responsive for Tablets (≤ 720px) */
 @media (max-width: 720px) {
+
     .login-container,
     .register-container {
         width: 90%;
@@ -286,6 +340,7 @@ input[type="checkbox"] {
 
 /* Responsive for Mobiles (≤ 480px) */
 @media (max-width: 480px) {
+
     .login-container,
     .register-container {
         width: 95%;
