--- a/Authentication/src/main/resources/static/css/style.css
+++ b/Authentication/src/main/resources/static/css/style.css
@@ -151,6 +151,7 @@ input[type="checkbox"] {
     border-radius: 12px;
     background-color: #f9f9f9;
     text-align: center;
+    margin-top: 50px;
 }
 
 .otp-container input,
@@ -158,6 +159,42 @@ input[type="checkbox"] {
     margin: 10px 0;
     padding: 10px;
     width: 80%;
+}
+
+.otp-inputs {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin: 20px 0;
+}
+
+.otp-inputs input {
+    width: 45px;
+    height: 50px;
+    font-size: 24px;
+    text-align: center;
+    border: 2px solid #ccc;
+    border-radius: 8px; /* curved corners */
+    outline: none;
+    transition: border-color 0.3s ease;
+}
+
+.otp-inputs input:focus {
+    border-color: #6c63ff; /* highlight color on focus */
+}
+
+.otp-container button {
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 6px;
+    background-color: #6c63ff;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.otp-container button:hover {
+    background-color: #574fd6;
 }
 
 /* reset password */
