--- a/Authentication/src/main/resources/templates/forgot_password.html
+++ b/Authentication/src/main/resources/templates/forgot_password.html
@@ -4,6 +4,7 @@
 <head>
     <title>Forgot Password</title>
     <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/script.js" defer></script>
 </head>
 
 <body>
