--- a/Authentication/src/main/resources/templates/otp_confirmation.html
+++ b/Authentication/src/main/resources/templates/otp_confirmation.html
@@ -4,7 +4,7 @@
 <head>
     <title>OTP Confirmation</title>
     <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/otp.js" defer></script>
+    <script src="/js/script.js" defer></script>
 </head>
 
 <body>
