--- a/Authentication/src/main/resources/templates/login.html
+++ b/Authentication/src/main/resources/templates/login.html
@@ -5,6 +5,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <script src="/js/script.js" defer></script>
 </head>
 
 <body>
