--- a/Authentication/src/main/resources/templates/register.html
+++ b/Authentication/src/main/resources/templates/register.html
@@ -3,6 +3,7 @@
 <head>
     <title>Register</title>
     <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/script.js" defer></script>
 </head>
 <body>
 <div class="register-container">
