--- a/Authentication/src/main/resources/templates/reset_password.html
+++ b/Authentication/src/main/resources/templates/reset_password.html
@@ -3,6 +3,7 @@
 <head>
     <title>Reset Password</title>
     <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/script.js" defer></script>
 </head>
 <body>
 
