added pop up message if the user enter the wrong email

--- a/Authentication/src/main/resources/templates/forgot_password.html
+++ b/Authentication/src/main/resources/templates/forgot_password.html
@@ -14,8 +14,11 @@
             <input type="email" name="email" placeholder="Enter your email" required>
             <button type="submit">Send OTP</button>
         </form>
-        <div th:if="${error}" style="color:red; margin-top:10px;">
-            <p th:text="${error}"></p>
+        <!-- Modal box for error -->
+        <div id="errorModal" class="modal" th:if="${error}">
+            <div class="modal-content">
+                <p th:text="${error}"></p>
+            </div>
         </div>
 
     </div>
