--- a/Authentication/src/main/resources/templates/forgot_password.html
+++ b/Authentication/src/main/resources/templates/forgot_password.html
@@ -9,10 +9,13 @@
 
 <body>
     <div class="blur-container forgot-password-container">
-        <h2>Forgot Password</h2>
+        <h2>Enter E-mail to reset Password</h2>
         <form th:action="@{/forgot-password}" method="post">
             <input type="email" name="email" placeholder="Enter your email" required>
             <button type="submit">Send OTP</button>
+            <!-- TEMP DEBUG -->
+
+
         </form>
         <!-- Modal box for error -->
         <div id="errorModal" class="modal" th:if="${error}">
