--- a/Authentication/src/main/resources/templates/reset_password.html
+++ b/Authentication/src/main/resources/templates/reset_password.html
@@ -8,6 +8,7 @@
 <body>
 
 <div class="reset-container">
+    <a href="javascript:history.back()" class="back-button" title="Go back">&#8592;</a>
     <h2>Reset Password</h2>
     <form th:action="@{/reset-password}" method="post">
         <input type="hidden" name="email" th:value="${email}" />
