--- a/Authentication/src/main/resources/templates/reset_success.html
+++ b/Authentication/src/main/resources/templates/reset_success.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div class="blur-container">
+        <a href="javascript:history.back()" class="back-button" title="Go back">&#8592;</a>
         <h2>Forgot Password - Success</h2>
         <p th:text="${message}"></p>
         <a href="/login" class="link-btn">Go to Login</a>
