--- a/Authentication/src/main/resources/templates/forgot_password.html
+++ b/Authentication/src/main/resources/templates/forgot_password.html
@@ -9,6 +9,7 @@
 
 <body>
     <div class="blur-container forgot-password-container">
+        <a href="javascript:history.back()" class="back-button" title="Go back">&#8592;</a>
         <h2>Enter E-mail to reset Password</h2>
         <form th:action="@{/forgot-password}" method="post">
             <input type="email" name="email" placeholder="Enter your email" required>
