--- a/Authentication/src/main/resources/templates/register.html
+++ b/Authentication/src/main/resources/templates/register.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div class="register-container">
+    <a href="javascript:history.back()" class="back-button" title="Go back">&#8592;</a>
     <h2>Register</h2>
     <form th:action="@{/register}" method="post" th:object="${user}">
         <input type="text" th:field="*{firstName}" placeholder="First Name" required><br>
