--- a/Authentication/src/main/resources/templates/register_successfull.html
+++ b/Authentication/src/main/resources/templates/register_successfull.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div class="success-container">
+    <a href="javascript:history.back()" class="back-button" title="Go back">&#8592;</a>
     <h2>Registration Successful!</h2>
     <p>Welcome, <span th:text="${username}"></span>!</p>
     <p><a th:href="@{/login}">Go to Login</a></p>
