--- a/Authentication/src/main/resources/templates/forgot_password.html
+++ b/Authentication/src/main/resources/templates/forgot_password.html
@@ -4,12 +4,15 @@
 <head>
     <title>Forgot Password</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="/js/script.js" defer></script>
 </head>
 
 <body>
     <div class="blur-container forgot-password-container">
-        <a href="javascript:history.back()" class="back-button" title="Go back">&#8592;</a>
+        <a href="javascript:history.back()" class="back-arrow" title="Go back">
+            <i class="fas fa-arrow-left"></i>
+        </a>
         <h2>Enter E-mail to reset Password</h2>
         <form th:action="@{/forgot-password}" method="post">
             <input type="email" name="email" placeholder="Enter your email" required>
