--- a/Authentication/src/main/resources/templates/otp_confirmation.html
+++ b/Authentication/src/main/resources/templates/otp_confirmation.html
@@ -4,12 +4,15 @@
 <head>
     <title>OTP Confirmation</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="/js/script.js" defer></script>
 </head>
 
 <body>
     <div class="otp-container">
-        <a href="javascript:history.back()" class="back-button" title="Go back">&#8592;</a>
+        <a href="javascript:history.back()" class="back-arrow" title="Go back">
+            <i class="fas fa-arrow-left"></i>
+        </a>
         <h2>Enter OTP</h2>
         <form th:action="@{/verify-otp}" method="post" id="otpForm">
             <input type="hidden" th:value="${email}" name="email">
