--- a/Authentication/src/main/resources/templates/reset_password.html
+++ b/Authentication/src/main/resources/templates/reset_password.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <title>Reset Password</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="/js/script.js" defer></script>
 </head>
+
 <body>
 
-<div class="reset-container">
-    <a href="javascript:history.back()" class="back-button" title="Go back">&#8592;</a>
-    <h2>Reset Password</h2>
-    <form th:action="@{/reset-password}" method="post">
-        <input type="hidden" name="email" th:value="${email}" />
-        <input type="password" name="newPassword" placeholder="New Password" required />
-        <input type="password" name="confirmPassword" placeholder="Confirm Password" required />
-        <button type="submit">Reset</button>
-    </form>
+    <div class="reset-container">
+        <a href="javascript:history.back()" class="back-arrow" title="Go back">
+            <i class="fas fa-arrow-left"></i>
+        </a>
+        <h2>Reset Password</h2>
+        <form th:action="@{/reset-password}" method="post">
+            <input type="hidden" name="email" th:value="${email}" />
+            <input type="password" name="newPassword" placeholder="New Password" required />
+            <input type="password" name="confirmPassword" placeholder="Confirm Password" required />
+            <button type="submit">Reset</button>
+        </form>
 
-    <p class="error" th:if="${error}" th:text="${error}"></p>
-    <p class="success" th:if="${success}" th:text="${success}"></p>
-</div>
+        <p class="error" th:if="${error}" th:text="${error}"></p>
+        <p class="success" th:if="${success}" th:text="${success}"></p>
+    </div>
 
 </body>
+
 </html>
