--- a/Authentication/src/main/resources/static/css/style.css
+++ b/Authentication/src/main/resources/static/css/style.css
@@ -197,17 +197,19 @@ input[type="checkbox"] {
     background-color: #574fd6;
 }
 
-.back-button {
+/* back arrow */
+.back-arrow {
     position: absolute;
     top: 20px;
     left: 20px;
     font-size: 28px;       /* Controls arrow size */
-    color: black;          /* Arrow color */
+    color: #1b1763;
+;          /* Arrow color */
     text-decoration: none; /* Removes underline */
     cursor: pointer;
 }
 
-.back-button:hover {
+.back-arrow:hover {
     transform: scale(1.05);
     text-decoration: none;
 }
