--- a/Authentication/src/main/resources/templates/register.html
+++ b/Authentication/src/main/resources/templates/register.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <title>Register</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="/js/script.js" defer></script>
 </head>
+
 <body>
-<div class="register-container">
-    <a href="javascript:history.back()" class="back-button" title="Go back">&#8592;</a>
-    <h2>Register</h2>
-    <form th:action="@{/register}" method="post" th:object="${user}">
-        <input type="text" th:field="*{firstName}" placeholder="First Name" required><br>
-        <input type="text" th:field="*{lastName}" placeholder="Last Name" required><br>
-        <!-- <input type="text" th:field="*{username}" placeholder="Username" required><br> -->
-        <input type="email" th:field="*{email}" placeholder="Email" required><br>
-        <!-- <input type="text" th:field="*{phone}" placeholder="Phone Number"><br> -->
-        <input type="password" th:field="*{password}" placeholder="Password" required><br>
-        <input type="password" name="confirmPassword" placeholder="Confirm Password" required><br>
-        <button type="submit">Register</button>
-    </form>
-    <p><a th:href="@{/login}">Already have an account?</a></p>
-</div>
+    <div class="register-container">
+        <a href="javascript:history.back()" class="back-arrow" title="Go back">
+            <i class="fas fa-arrow-left"></i>
+        </a>
+        <h2>Register</h2>
+        <form th:action="@{/register}" method="post" th:object="${user}">
+            <input type="text" th:field="*{firstName}" placeholder="First Name" required><br>
+            <input type="text" th:field="*{lastName}" placeholder="Last Name" required><br>
+            <!-- <input type="text" th:field="*{username}" placeholder="Username" required><br> -->
+            <input type="email" th:field="*{email}" placeholder="Email" required><br>
+            <!-- <input type="text" th:field="*{phone}" placeholder="Phone Number"><br> -->
+            <input type="password" th:field="*{password}" placeholder="Password" required><br>
+            <input type="password" name="confirmPassword" placeholder="Confirm Password" required><br>
+            <button type="submit">Register</button>
+        </form>
+        <p><a th:href="@{/login}">Already have an account?</a></p>
+    </div>
 </body>
+
 </html>
