--- a/Authentication/src/main/resources/templates/login.html
+++ b/Authentication/src/main/resources/templates/login.html
@@ -14,7 +14,10 @@
 
         <form th:action="@{/login}" method="post" th:object="${user}">
             <input type="text" th:field="*{username}" placeholder="Username" required><br>
-            <input type="password" th:field="*{password}" placeholder="Password" required><br>
+            <div class="password-field">
+                <input type="password" th:field="*{password}" placeholder="Password" id="password" required>
+                <i class="fas fa-eye toggle-password" onclick="togglePassword('password', this)"></i>
+            </div>
             <div class="options-row">
                 <label class="remember-me">
                     <input type="checkbox" name="remember"> Remember Me
