--- a/Authentication/src/main/resources/templates/reset_password.html
+++ b/Authentication/src/main/resources/templates/reset_password.html
@@ -17,8 +17,15 @@
         <h2>Reset Password</h2>
         <form th:action="@{/reset-password}" method="post">
             <input type="hidden" name="email" th:value="${email}" />
-            <input type="password" name="newPassword" placeholder="New Password" required />
-            <input type="password" name="confirmPassword" placeholder="Confirm Password" required />
+            <div class="password-field">
+                <input type="password" th:field="*{password}" placeholder="Password" id="password" required>
+                <i class="fas fa-eye toggle-password" onclick="togglePassword('password', this)"></i>
+            </div><br>
+            <div class="password-field">
+                <input type="password" name="confirmPassword" placeholder="Confirm Password" id="confirmPassword"
+                    required>
+                <i class="fas fa-eye toggle-password" onclick="togglePassword('confirmPassword', this)"></i>
+            </div>
             <button type="submit">Reset</button>
         </form>
 
