removed unwanted space

--- a/Authentication/src/main/resources/templates/reset_password.html
+++ b/Authentication/src/main/resources/templates/reset_password.html
@@ -20,7 +20,7 @@
             <div class="password-field">
                 <input type="password" th:field="*{password}" placeholder="Password" id="password" required>
                 <i class="fas fa-eye toggle-password" onclick="togglePassword('password', this)"></i>
-            </div><br>
+            </div>
             <div class="password-field">
                 <input type="password" name="confirmPassword" placeholder="Confirm Password" id="confirmPassword"
                     required>
